# poetry-build-compact

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  workflow.yml
poetry_build_compact/: compile.py  plugin.py
