[tool.poetry]
name = "poetry-build-compact"
version = "1.0.0"
description = "Poetry plugin providing command to compile package into bytecode one"
authors = ["ZiphyCare LLC <support@ziphycare.com>"]
packages = [{include = "poetry_build_compact"}]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.5.0"

[tool.poetry.plugins."poetry.application.plugin"]
build-compact = "poetry_build_compact.plugin:BuildCompactPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"